--- a/projects/mcmc/index.html
+++ b/projects/mcmc/index.html
@@ -66,7 +66,7 @@
   <div class="col-md-12 text-justify content">
     <p>Markov chain Monte Carlo methods are used to estimate the posterior distribution of a parameter of interest. We draw samples from the estimated posterior distribution in order to compute statistics from that distribution. The two main methods I have been looking at are the Metropolis-Hastings algorithm and the other is using Hamiltonian Dynamics.</p>
 
-<p>The interactive web app&rsquo;s purpose is to help understand the difference between the two methods. There is an introduction to Bayesian statistics, each method, and then three examples. The app is still being worked on: the explanations are still under construction, and the examples are still being tweaked/written up. <strong><a href="https://eduardoandgo.shinyapps.io/mcmcapp/">[link]</a></strong></p>
+<p>The interactive web app&rsquo;s purpose is to help understand the difference between the two methods. There is an introduction to Bayesian statistics, each method, and then three examples. The app is still being worked on: the explanations are still under construction, and the examples are still being tweaked/written up. <strong><a href="https://eduardoandgo.shinyapps.io/mcmcapp/">[link]</a></strong> <strong><a href="https://eduardoandgo.github.io/slides/presentation.pdf">[slides]</a></strong></p>
 
   </div>
 </section>
