--- a/projects/index.html
+++ b/projects/index.html
@@ -67,7 +67,7 @@
     </li>
     
     <li class="list-entry">
-      <a class="list-entry-link" href="/projects/crime/">Crime in the United States</a>
+      <a class="list-entry-link" href="/projects/crime/">Crime in Chicago</a>
       <p class="meta">
          FEB 18, 2019 
         <span class="category">
